[package]
name = "shaken"
version = "0.1.0"
authors = ["museun <museun@outlook.com>"]
edition = "2018"

[dependencies]
log = "0.4.6"
simplelog = "0.5.3"
rand = "0.6.5"
chrono = "0.4.6"
ureq = "0.9.0"
directories = "1.0.2"
termcolor = "1.0.4"
hashbrown = "0.1.8"
serde = { version = "1.0.88", features = ["derive"] }
serde_json = "1.0.38"
toml = "0.4.10"
rusqlite = { version = "0.16.0", features = ["bundled", "chrono"] }
crossbeam-channel = "0.3.8"
scoped_threadpool = "0.1.9"
