[package]
name = "brain"
version = "0.1.0"
edition = "2018"
authors = ["museun <museun@outlook.com>"]

[dependencies]
rand = "0.6.5"
getopts = "0.2.18"
tiny_http = "0.6.2"
serde = { version = "1.0.88", features = ["derive"] }
bincode = "1.1.2"
hashbrown = { version = "0.1.8", features = ["serde"] }
