[package]
name = "brain"
version = "0.1.0"
authors = ["museun <museun@outlook.com>"]
edition = "2018"

[dependencies]
shaken = { path = "../shaken" }

log = "0.4.6"
simplelog = "0.5.3"
rand = "0.6.5"
directories = "1.0.2"
tiny_http = "0.6.2"
hashbrown = { version = "0.2.0", features = ["serde"] }
bincode = "1.1.3"
serde = { version = "1.0.90", features = ["derive"] }
