[package]
name = "dono"
version = "0.1.0"
authors = ["museun <museun@outlook.com>"]
edition = "2018"

[dependencies]
log = "0.4.6"
simplelog = "0.5.3"
directories = "1.0.2"
once_cell = "0.1.8"
regex = "1.1.5"
ureq = "0.9.1"
tiny_http = "0.6.2"
serde = { version = "1.0.90", features = ["derive"] }
serde_json = "1.0.39"
toml = "0.5.0"
rusqlite = { version = "0.17.0", features = ["bundled"] }
