[package]
name = "shaken"
version = "0.1.0"
authors = ["museun <museun@outlook.com>"]
edition = "2018"

[dependencies]
log = "0.4.6"
simplelog = "0.5.3"
rand = "0.6.5"
chrono = "0.4.6"
ureq = "0.9.1"
directories = "1.0.2"
termcolor = "1.0.4"
crossbeam-channel = "0.3.8"
scoped_threadpool = "0.1.9"
once_cell = "0.1.8"
inventory = "0.1.3"
heck = "0.3.1"

[dependencies.toml]
version = "0.5.0"
features = ["preserve_order"]

[dependencies.hashbrown]
version = "0.2.0"
features = ["serde"]

[dependencies.rusqlite]
version = "0.17.0"
features = ["bundled", "chrono"]

[dependencies.serde]
version = "1.0.90"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.39"
features = ["preserve_order"]
